<resources>
    <string name="app_name">Cart App</string>
    <string name="dl_title">Download Url</string>
    <string name="caption_title">Add a Caption:</string>
    <string name="caption_hint">Caption</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign up</string>
    <string name="profile">Profile</string>
    <string name="upload_error">Didn\'t Work! Damnit!</string>
    <string name="signup_title">Sign Up</string>
    <string name="et_email">Email</string>
    <string name="empty_email">Email is required</string>
    <string name="empty_password">Password is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fp_message">We just need your registered Email to send you password reset instructions.</string>
    <string name="send">Send</string>
    <string name="fp_error">Email not found!</string>
    <string name="fp_empty_email">Email required!</string>
    <string name="delete">Delete</string>
    <string name="dontHave">Don\'t have an account?</string>
    <string name="alreadyHave">Already have an account?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="email_sent">Email Sent!</string>
    <string name="title_activity_ride_info">Ride Info</string>
    <string name="ride_offers">Ride Offers</string>
    <string name="gps_network_not_enabled">GPS not enabled!</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="location_permission_denied">Location Access Denied</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f Timestamp: %3$tr"</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_lon">Invalid Latitude and Longitude Entered</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="update_profile">Update Profile</string>
    <string name="chat">Chat</string>
    <string name="temp">Temp</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="rides_taken">Rides Taken</string>
    <string name="rides_given">Rides Given</string>
    <string name="ride_history">Ride History</string>
    <string name="waitonaccept">Waiting on ride requester acceptance...</string>
    <string name="accept">Accept Ride</string>
    <string name="reject">Reject</string>
    <string name="createChatroom">Create Chatroom</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="CreateRoom">Create Group</string>
    <string name="pickup">Pickup Location</string>
    <string name="drop_off">Drop Off Location</string>
    <string name="riderequest">Ride Request</string>
    <string name="title_activity_get_current_location">GetCurrentLocation</string>
    <string name="message">Message</string>
    <string name="offer">Offer Ride</string>
    <string name="messageBarHint">Say Something..</string>
    <string name="title_activity_get_address">GetAddress</string>
    <string name="viewmap">View Map</string>
    <string name="no_rides">No Ride Requests At This Time</string>
    <string name="map_zoom">Map Zoom</string>
    <string name="get_dir">Directions to Client</string>
    <string name="endride">End Ride</string>
    <string name="Profile_Title">User Profile</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="age">Age</string>
    <string name="weight_label">Weight :</string>
    <string name="address_label">Address:</string>
    <string name="age_hint">Age</string>
    <string name="weight_hint">Weight</string>
    <string name="address">Address</string>
    <string name="temp_topayment">Payment</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="purchase">Purchase</string>
    <string name="default_notification_channel_id">mychannel</string>
    <string name="default_notification_channel_title">mychannel_title</string>
    <string name="produce">Produce</string>
    <string name="grocery">Grocery</string>
    <string name="type">%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lifestyle">Lifestyle</string>
</resources>
